some minor updates

--- a/glossary.html
+++ b/glossary.html
@@ -7,10 +7,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header class="navbar">
+        <a class="navitem" href="index.html">Home Page</a> 
+        <a class="navitem" href="page2.html">Molten Salt</a> 
+        <a class="navitem" href="rpgs.html">TTRPGs</a>
+        <a class="navitem" href="glossary.html">Glossary</a>
+    </header>
     <ul>
         <li>TTRPG - Table top role plaing game </li>
         <li>D&D - Dungeons and dragons, often written with the edion e.g. 3.5 or 5e        </li>
         <li>GM - Games master, called a DM, Dungeon master in D&D.        </li>
     </ul>
+
+    <footer class="footer">
+        <a class="footeritem" href="https://www.linkedin.com/in/samuel-j-s-adams/">LinkedIn</a>
+        <a class="footeritem" href="https://en.wikipedia.org/wiki/Main_Page">Wikipedia</a>
+    </footer>
 </body>
 </html>
