--- a/index.html
+++ b/index.html
@@ -7,14 +7,12 @@
     <link rel="stylesheet" href="style.css"><!-- this links to the style sheet that controls how things are displayed=-->
 </head>
 <body>
-    <div class="navbar">
-    <header>
-        <a href="index.html">Home Page</a> 
-        <a href="page2.html">Molten Salt</a> 
-        <a href="rpgs.html">TTRPGs</a>
-        <a href="glossary.html">Glossary</a>
+    <header class="navbar">
+        <a class="navitem" href="index.html">Home Page</a> 
+        <a class="navitem" href="page2.html">Molten Salt</a> 
+        <a class="navitem" href="rpgs.html">TTRPGs</a>
+        <a class="navitem" href="glossary.html">Glossary</a>
     </header>
-    </div>
     <h1>My First Web Page</h1>
     <hr>
     <h2>This is a demo</h2>
@@ -65,5 +63,11 @@
         <td>Row 3</td> 
 </table>
 </div>
+
+<footer class="footer">
+    <a class="footeritem" href="https://www.linkedin.com/in/samuel-j-s-adams/">LinkedIn</a>
+    <a class="footeritem" href="https://en.wikipedia.org/wiki/Main_Page">Wikipedia</a>
+</footer>
+
 </body>
 </html>
