--- a/page2.html
+++ b/page2.html
@@ -7,16 +7,19 @@
     <title>Molten Salt Electrolysis</title>
 </head>
 <body>
-    <div class="navbar">
-        <header>
-            <a href="index.html">Home Page</a> 
-            <a href="page2.html">Molten Salt</a> 
-            <a href="rpgs.html">TTRPGs</a>
-            <a href="glossary.html">Glossary</a>
-        </header>
-        </div>
+    <header class="navbar">
+        <a class="navitem" href="index.html">Home Page</a> 
+        <a class="navitem" href="page2.html">Molten Salt</a> 
+        <a class="navitem" href="rpgs.html">TTRPGs</a>
+        <a class="navitem" href="glossary.html">Glossary</a>
+    </header>
     <h1>Molten Salt Electrolysis</h1>
     <p>Molten salt is useful for electrolysis due to it having a different potential window to water, this means that aluminium can be refined using the <a href="https://en.wikipedia.org/wiki/Hall–Héroult_process" target="_blank">
         Hall–Héroult process. </a></p> <p>This technology is mature, I was working on refining refactory metals using the <a href="https://en.wikipedia.org/wiki/FFC_Cambridge_process"> FFC Cambridge process</a> This relies on the ability to disolve elemental Calcium which acts as a reductant. </p>
-</body>
+
+        <footer class="footer">
+            <a class="footeritem" href="https://www.linkedin.com/in/samuel-j-s-adams/">LinkedIn</a>
+            <a class="footeritem" href="https://en.wikipedia.org/wiki/Main_Page">Wikipedia</a>
+        </footer>
+    </body>
 </html>
