--- a/rpgs.html
+++ b/rpgs.html
@@ -8,25 +8,25 @@
 </head>
 <body>
 
-    <div class="navbar">
-        <header>
-            <a href="index.html">Home Page</a> 
-            <a href="page2.html">Molten Salt</a> 
-            <a href="rpgs.html">TTRPGs</a>
-            <a href="glossary.html">Glossary</a>
-        </header>
-        </div>
+    <header class="navbar">
+        <a class="navitem" href="index.html">Home Page</a> 
+        <a class="navitem" href="page2.html">Molten Salt</a> 
+        <a class="navitem" href="rpgs.html">TTRPGs</a>
+        <a class="navitem" href="glossary.html">Glossary</a>
+    </header>
     <h1>Table Top Role Playing Games</h1>
-    <p>There are several Table Top Role playing games (TTRPGs) that I run and played. </p>
-    <p> The first TTRPG I played was Dungeons and dragons (D&D) 3.5 but I haven't played that since 2014 when 5e was released, I am not yet familiar with the 2024 update because I prefer to play indy RPGs.</p>
+    <p>There are several Table Top Role playing games <a href="glossary.html">(TTRPGs)</a> that I run and played. </p>
+    <p> The first TTRPG I played was Dungeons and dragons <a href="glossary.html">(D&D)</a> 3.5 but I haven't played that since 2014 when 5e was released, I am not yet familiar with the 2024 update because I prefer to play indy RPGs.</p>
     <p>
         A role plaing game is a form of colabrative storytelling, 
         where the players inhabit the charicters and decide what they do.
         The rules or mechanics are a method for deciding what happens when the players try to do things.
-        There is often a Gamesmaster, or Dungeon master in D&D, who runs the game, enforces* the rules, and describes the world.
+        There is often a Gamesmaster <a href="glossary.html">(GM)</a>, 
+        or Dungeon master <a href="glossary.html">(DM)</a> in <a href="glossary.html">D&D</a>,
+         who runs the game, enforces* the rules, and describes the world.
     </p>
     <p>
-        Not all TTRPGs
+        Not all TTRPGs have a game master for example, Alice is Missing, And Fiasco are both run without a GM. 
     </p>
     <div class="dnd">
         <p>Dungeons and dragons is the most popular and well known tabletop roleplaing games.</p>
@@ -37,5 +37,21 @@
     <div class="spire">
 
     </div>
+
+    <div class="fiasco">
+        
+    </div>
+
+    <div class="aim">
+
+    </div>
+    <div class="footnotes">
+        *Or not, often a GM will bend the rules to allow for the "Rule of Cool" or if they think something makes sense to work differently. 
+    </div>
+
+    <footer class="footer">
+        <a class="footeritem" href="https://www.linkedin.com/in/samuel-j-s-adams/">LinkedIn</a>
+        <a class="footeritem" href="https://en.wikipedia.org/wiki/Main_Page">Wikipedia</a>
+    </footer>
 </body>
 </html>
